--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         continue-on-error: false
         strategy:
             matrix:
-                php-version: ['7.4']
+                php-version: ['7.4', '8.1']
         steps:
             - name: 'Checkout code'
               uses: actions/checkout@v2.3.3
