--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
         }
     ],
     "require": {
-        "symfony/http-kernel": "^5.4",
-        "symfony/config": "^5.4",
-        "symfony/dependency-injection": "^5.4"
+        "symfony/http-kernel": "^5.4||^6.0",
+        "symfony/config": "^5.4||^6.0",
+        "symfony/dependency-injection": "^5.4||^6.0"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^6.0"
