--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
     ],
     "require": {
         "php" : ">=7.4",
-        "symfony/http-kernel": "^5.4||^6.0",
-        "symfony/config": "^5.4||^6.0",
-        "symfony/dependency-injection": "^5.4||^6.0"
+        "symfony/http-kernel": "^5.4",
+        "symfony/config": "^5.4",
+        "symfony/dependency-injection": "^5.4"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^6.0",
