--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,13 @@
     ],
     "require": {
         "php" : ">=7.4",
-        "symfony/http-kernel": "^5.4||^6.0",
-        "symfony/config": "^5.4||^6.0",
-        "symfony/dependency-injection": "^5.4||^6.0"
+        "symfony/http-kernel": "^5.4",
+        "symfony/config": "^5.4",
+        "symfony/dependency-injection": "^5.4"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^6.0"
+        "symfony/phpunit-bridge": "^6.0",
+        "symfony/yaml": "^5.4",
+        "symfony/expression-language": "^5.4"
     }
 }
